# verified-wasm-verifier

./: .gitignore  LICENSE.md  README.md  pyproject.toml
cli/: leancp_verify.py
public_material/verified_wasm_export_bundle/: certificate.json  generation.json  output.wat
public_material/verified_wasm_export_bundle/lean_source/: DebugInferSortZeroExamples.lean  DebugInferSortZeroOnDecl.lean  VerifiedCheckImportDriver.lean  lakefile.lean
public_material/verified_wasm_export_bundle/lean_source/HeytingLean/: ATP.lean  AsymptoticSafety.lean  Basic.lean  BountyHunter.lean  Bridge.lean  Certified.lean  DarwinsCage.lean  Discovery.lean  Epiplexity.lean  FractalUniverse.lean  GU.lean  Genesis.lean  HeytingVeil.lean  InqBQ.lean  KernelAssurance.lean  Layouts.lean  LieGroups.lean  MLTT.lean  Matula.lean  MirandaDynamics.lean  Moonshine.lean  NucleusDB.lean  NucleusPOD.lean  OTM.lean  OpenCLAW.lean  ParticleLenia.lean  PersistentSheafLaplacian.lean  Probability.lean  QuantumActiveInference.lean  Representations.lean  Silicon.lean
public_material/verified_wasm_export_bundle/lean_source/Proof2VecQueries/: Query_3329279f2e.lean  Query_57650d3c68.lean  Query_b1418c772c.lean  Query_e9126330d8.lean
public_material/verified_wasm_export_bundle/lean_source/Tests/: BudgetWindow.lean  MerkleCorrectness.lean  PoseidonDeterminism.lean  ProofLifecycle.lean  Reproducibility.lean  TCBMetadata.lean  VerifierParity.lean
scripts/: verify_all.sh  verify_negative_cases.sh
verifier/: models.py  verify.py  version.py
(+4272 files in other folders)
